[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hosha-network"
version = "0.1.0"
description = "A Python library to construct detailed pedestrian-vehicle layered networks from macro-level road data."
authors = [
    { name="Hiroyuki Hasada", email="important83d@email.com" }
]
license = { file = "MIT LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "geopandas",
    "numpy",
    "networkx",
    "shapely"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "build",
    "twine"
]

[tool.setuptools]
packages = ["hosha_network"]
package-dir = {"" = "src"}